Fix horizontal alignment for titles

--- a/src/modern/blocks/sv-container.scss
+++ b/src/modern/blocks/sv-container.scss
@@ -5,13 +5,14 @@
 }
 
 .sv-container-modern__title {
+  padding-left: 0.55em;
   @media only screen and (min-width: 1000px) {
     margin-right: 5%;
-    margin-left: calc(5% + 0.293em);
+    margin-left: 5%;
   }
   @media only screen and (max-width: 1000px) {
     margin-right: 10px;
-    margin-left: calc(10px + 0.293em);
+    margin-left: 10px;
   }
   color: $main-color;
   padding-top: 5em;
