--- a/src/modern/blocks/sv-progress.scss
+++ b/src/modern/blocks/sv-progress.scss
@@ -13,10 +13,11 @@
   color: $progress-text-color;
   font-size: 0.87em;
   font-weight: bold;
+  padding-left: 0.6321em;
   @media only screen and (min-width: 1000px) {
-    margin-left: calc(5% + 0.293em);
+    margin-left: 5%;
   }
   @media only screen and (max-width: 1000px) {
-    margin-left: calc(10px + 0.293em);
+    margin-left: 10px;
   }
 }
